Updated industry day page

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -741,13 +741,13 @@ title: Industry Day
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
       <div class="text-center">
-        <!-- <img
-          src=""
+        <img
+          src="/assets/images/Karam-Ali Headshot.png"
           alt="Karam-Ali Talakshi"
           class="circle-img mb-3"
-        /> -->
+        />
         <h4>Karam-Ali Talakshi</h4>
-        <h6><i>Director, Growth</i></h6>
+        <h6><i>Director of Partnerships</i></h6>
         <h6>
           <i
             ><a target="_blank" href="https://www.platformcalgary.com/"
@@ -759,7 +759,21 @@ title: Industry Day
     </div>
     <div class="col-md-9 col-sm-8">
       <h4>Biography</h4>
-      <p>Coming soon</p>
+      <p>
+        Karam-Ali serves as Director of Partnerships at Platform Calgary,
+        leading engagements with corporate, ecosystem, strategic partners, and
+        the organization's valued donors. His diverse background includes five
+        years as a corporate securities lawyer. Most recently, Ali was a
+        founding executive team member at a Calgary tech company, where he
+        played a crucial role in their operational, partnership, investment, and
+        IP strategies, contributing to the growth of a 35+ person team. A
+        seasoned business advisor and strategist, he has actively built and
+        advanced both private and volunteer organizations. Ali's strategic
+        foresight and proven ability to lead and execute complex,
+        cross-functional projects make him a significant asset to any team he's
+        on. A hardcore Calgary Flames fan, he enjoys travelling and spending
+        time with his wife and two young daughters.
+      </p>
     </div>
   </div>
   <!-- Katanya B. Kuntz -->
@@ -923,6 +937,61 @@ title: Industry Day
     <div class="col-md-9 col-sm-8">
       <h4>Biography</h4>
       <p>Coming soon</p>
+    </div>
+  </div>
+  <!-- Martin Ferguson-Pell  -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/MFP Headshot.jpeg"
+          alt="Martin Ferguson-Pell "
+          class="circle-img mb-3"
+        />
+        <h4>Dr. Martin Ferguson-Pell</h4>
+        <h6><i>President</i></h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://www.elixrsim.com/"
+              >ELIXR Simulations Association</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Martin Ferguson-Pell completed a BSc in physics at Exeter University in
+        the UK and then a Ph.D. in biomedical engineering at the University of
+        Strathclyde. He has held academic appointments in Glasgow, New York and
+        London UK. In 2007 he was appointed Dean of the Faculty of
+        Rehabilitation Medicine at the University of Alberta.
+        <br /><br />
+        He designed and developed the UofA’s Rehabilitation Robotics Laboratory
+        which opened in 2012. His team has a strong focus on developing
+        technologies that deliver comprehensive virtual clinical assessments
+        between urban specialty clinics and rural health centres.
+        <br /><br />
+        Between 2016-2004 he was the Executive Director of the Alberta Bone and
+        Joint Health Institute, a non-profit which since 2005 has created a
+        unique repository of orthopaedic outcomes and quality improvement data
+        and led the implementation of numerous initiatives to advance bone and
+        joint health in Alberta.
+        <br /><br />
+        He founded ELIXR in 2019. ELIXR is a non-profit collaboration of 11
+        Alberta post-secondary institutions and developer studios taking on the
+        challenge of ensuring that XR is used effectively in training and
+        education where complex simulations and 3D constructs represent
+        particular challenges for learners. He is also co-founder of Click&Push
+        Accessibility, a social enterprise to improve access to public spaces
+        for people with mobility limitations.
+        <br /><br />
+        He was 2024 winner of the ASTech Award for Medical, Healthcare, and
+        Pharmaceuticals - Application (Academic Collaboration).
+      </p>
     </div>
   </div>
   <!-- Melanie MacKenzie -->
