Updated industry day speakers

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -1028,6 +1028,41 @@ title: Industry Day
       </p>
     </div>
   </div>
+  <!-- Mike Berthold -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/mike-berthold.jpg"
+          alt="Mike Berthold"
+          class="circle-img mb-3"
+        />
+        <h4>Mike Berthold</h4>
+        <h6>
+          <i>Senior Solutions Architect</i>
+        </h6>
+        <h6>
+          <i><a target="_blank" href="https://www.okta.com/">Okta</a></i>
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Mike is a Senior Solutions Architect based in Montreal, Canada. He
+        covers the Okta Platform (Workforce Identity and Customer Identity) as
+        well as Auth0 as part of Okta’s Office of the Field CTO (OFCTO) Presales
+        team. He works with his colleagues to build deep relationships with Okta
+        customers in North America, help design successful outcomes and ensure
+        the smooth planning, deployment, and ongoing use of Okta's solutions.
+        Mike has been working in Identity for over 20 years and holds several
+        certifications, including CISSP and Okta Certified Technical Architect
+        (OCTA).
+      </p>
+    </div>
+  </div>
   <!-- Mike Craigen -->
   <div class="row">
     <div
