Added Shauna Zenteno keynote and updated industry day speakers

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -669,6 +669,39 @@ title: Industry Day
       </p>
     </div>
   </div>
+  <!-- Jamie Pompu -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Jamie Pompu.jpg"
+          alt="Jamie Pompu"
+          class="circle-img mb-3"
+        />
+        <h4>Jamie Pompu</h4>
+        <h6><i>Chief Information Officer</i></h6>
+        <h6>
+          <i><a target="_blank" href="https://www.tressl.ca/">Tressl</a></i>
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Jamie Pompu is the Chief Information Officer at Tressl, where he leads
+        the company’s technology strategy and innovation roadmap. With over a
+        decade scaling Agile interoperable systems across industries, from
+        rapid-growth startups to billion-dollar defense contracts for foreign
+        ministries, Jamie specializes in building scalable, resilient systems in
+        high-stakes environments. At Tressl, he’s enabling intelligent systems
+        that deliver real-time control, seamless stakeholder collaboration, and
+        data integrity. His leadership in spatial intelligence and AI positions
+        Tressl as a catalyst for digital-first asset stewardship.
+      </p>
+    </div>
+  </div>
   <!-- Jason Cameron -->
   <div class="row">
     <div
