Work on industry day and keynotes

--- a/index.html
+++ b/index.html
@@ -143,8 +143,257 @@ title: Home
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
+  {% include colocated-conferences.html %}
+</section>
+
+<section class="container-fluid d-flex flex-column gap-4 pt-5">
+  <div class="page-section w-100 px-5 pb-5">
+    <h2 class="text-center fs-2">
+      Join us at Industry Day and Explore how Innovators are Shaping the Future
+    </h2>
+    <div class="row mb-5 pt-5">
+      <div
+        class="col-sm-6 d-flex flex-column gap-3 justify-content-around py-2"
+      >
+        <p class="fs-5">
+          Join us at the 2025 IEEE Smart World Congress Industry Day, a dynamic
+          gathering of global thought leaders, pioneering innovators, and
+          economic development experts driving the next wave of smart
+          technologies. Discover cutting-edge solutions, forge strategic
+          partnerships, and explore how industry and research are shaping the
+          intelligent, interconnected world of tomorrow.
+        </p>
+        <div class="d-flex flex-row">
+          <a href="/program/industry-day/" class="btn btn-primary"
+            >Learn More About Industry Day</a
+          >
+        </div>
+      </div>
+      <div
+        class="col-sm-6 py-2 d-flex justify-content-center align-items-end"
+        style="max-height: 500px; overflow: hidden"
+      >
+        <img
+          src="/assets/images/xr-expo-ipDhOQ5gtEk-unsplash.jpg"
+          class="w-100 img-fluid"
+        />
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="container-fluid d-flex flex-column gap-4 bg-light">
+  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
+    <h2 class="fs-2 text-center">
+      Attend Keynote Presentations by World-Renowned Researchers
+    </h2>
+    <div class="row g-4">
+      <div class="col-md-4 mb-3 mb-sm-0">
+        <div class="card bg-light-subtle text-center h-100">
+          <div
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+          >
+            <h4 class="fs-4 text-center">
+              From Digital Twins to Generative Digital Twins: Towards a Novel
+              Approach in the IoT Edge-Cloud Continuum
+            </h4>
+            <p>
+              Explore the emerging concept of Generative Digital Twins (GDTs),
+              highlighting how Generative AI enhances their predictive,
+              adaptive, and explanatory capabilities for smart city and IoT
+              applications.
+            </p>
+            <div class="text-center">
+              <img
+                src="/assets/images/metaverse/g.jpg"
+                alt="Dr. Giancarlo Fortino"
+                class="circle-img mb-3"
+              />
+              <h5>Presented by Dr. Giancarlo Fortino</h5>
+              <h6><i>The University of Calabria, Italy</i></h6>
+            </div>
+
+            <a href="keynotes/giancarlo-fortino/" class="btn btn-primary w-100"
+              >Learn More</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3 mb-sm-0">
+        <div class="card bg-light-subtle h-100">
+          <div
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+          >
+            <h4 class="fs-4 text-center">
+              Intelligent Edge Sensing and Distributed Cognition Are
+              Transforming the Future of Smart World
+            </h4>
+            <p>
+              Examine how intelligent edge sensing and distributed cognition are
+              enabling real-time, privacy-aware, and resilient smart systems
+              across domains like transportation, healthcare, and mobile
+              crowdsensing.
+            </p>
+            <div class="text-center">
+              <img
+                src="/assets/images/Dr_Runhe_Huang.png"
+                alt="Dr. Runhe Huang"
+                class="circle-img mb-3"
+              />
+              <h5>Presented by Dr. Runhe Huang</h5>
+              <h6><i>Hosei University, Japan</i></h6>
+            </div>
+
+            <a href="keynotes/runhe-huang/" class="btn btn-primary w-100"
+              >Learn More</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3 mb-sm-0">
+        <div class="card bg-light-subtle h-100">
+          <div
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+          >
+            <h4 class="fs-4 text-center">
+              LLM (LSM) Is Not Equal to the Third AI Wave
+            </h4>
+            <p>
+              Explore how the evolution of AI from its historical cycles to
+              today's LLMs reveals both breakthroughs and barriers, and why
+              diverse, reliable approaches are essential for the next wave of
+              impactful, real-world AI solutions.
+            </p>
+            <div class="text-center">
+              <img
+                src="/assets/images/Chunsheng Yang.jpg"
+                alt="Dr. Chunsheng Yang"
+                class="circle-img mb-3"
+              />
+              <h5>Presented by Dr. Chunsheng Yang</h5>
+              <h6>
+                <i>Fellow of the Canadian Academy of Engineering (FCAE)</i>
+              </h6>
+            </div>
+
+            <a href="keynotes/chunsheng-yang/" class="btn btn-primary w-100"
+              >Learn More</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 mb-3 mb-sm-0">
+        <div class="card bg-light-subtle h-100">
+          <div
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+          >
+            <h4 class="fs-4 text-center">
+              Women Leading the Smart World: Equity, Innovation, and the Power
+              of Diverse Voices
+            </h4>
+            <p>
+              Discover how advancing technology and AI can address urgent global
+              challenges, and why inclusive leadership, diverse teams, and
+              creative approaches are essential for developing ethical,
+              impactful solutions for a smarter, more sustainable future.
+            </p>
+            <div class="text-center">
+              <img
+                src="/assets/images/Shauna Zenteno.jpg"
+                alt="Dr. Shauna Zenteno"
+                class="circle-img mb-3"
+              />
+              <h5>Presented by Dr. Shauna Zenteno</h5>
+              <h6>
+                <i
+                  >Dean of the Faculty of Science and Technology, Athabasca
+                  University</i
+                >
+              </h6>
+            </div>
+
+            <a href="keynotes/shauna-zenteno/" class="btn btn-primary w-100"
+              >Learn More</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3 mb-sm-0">
+        <div class="card bg-light-subtle h-100">
+          <div
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+          >
+            <h4 class="fs-4 text-center">Industry Day Keynote: Jan Bradley</h4>
+            <p>
+              Explore how the City of Calgary is transforming municipal services
+              through AI, IoT, RPA, and digital infrastructure, showcasing its
+              strategic, award-winning approach to building a smarter, more
+              equitable city.
+            </p>
+            <div class="text-center">
+              <img
+                src="/assets/images/Bradley, Jan-3604.jpg"
+                alt="Jan Bradley"
+                class="circle-img mb-3"
+              />
+              <h5>Presented by Jan Bradley</h5>
+              <h6>
+                <i>Director and CITO, The City of Calgary</i>
+              </h6>
+            </div>
+
+            <a
+              href="program/industry-day/#jan-bradley-keynote"
+              class="btn btn-primary w-100"
+              >Learn More</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3 mb-sm-0">
+        <div class="card bg-light-subtle h-100">
+          <div
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+          >
+            <h4 class="fs-4 text-center">Industry Day Keynote: Martin Dinel</h4>
+            <p>
+              Gain insight into Alberta's evolving cybersecurity landscape, from
+              rising threats and key adversaries to the CyberAlberta program's
+              strategic initiatives, as Martin outlines the province's vision to
+              become a global leader in cyber resilience and talent development.
+            </p>
+            <div class="text-center">
+              <img
+                src="/assets/images/Headshot - Martin Dinel.jpg"
+                alt="Martin Dinel"
+                class="circle-img mb-3"
+              />
+              <h5>Presented by Martin Dinel</h5>
+              <h6>
+                <i
+                  >Assistant Deputy Minister & CISO, Cybersecurity Division,
+                  Government of Alberta</i
+                >
+              </h6>
+            </div>
+
+            <a
+              href="program/industry-day/#martin-dinel-keynote"
+              class="btn btn-primary w-100"
+              >Learn More</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="container-fluid d-flex flex-column gap-4">
   <div
-    class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4 bg-light"
+    class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
   >
     <div class="row text-center">
       <div class="col-12"><h2 class="fs-2 mb-2">Organizing Committee</h2></div>
@@ -448,148 +697,6 @@ title: Home
   </div>
 </section>
 
-<section class="container-fluid d-flex flex-column gap-4">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
-    <h2 class="fs-2 text-center">
-      Attend Keynote Presentations by World-Renowned Researchers
-    </h2>
-    <div class="row pb-3">
-      <div class="col-md-4 mb-3 mb-sm-0">
-        <div class="card bg-light-subtle text-center h-100">
-          <div
-            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
-          >
-            <h4 class="fs-4 text-center">
-              From Digital Twins to Generative Digital Twins: Towards a Novel
-              Approach in the IoT Edge-Cloud Continuum
-            </h4>
-            <p>
-              Explore the emerging concept of Generative Digital Twins (GDTs),
-              highlighting how Generative AI enhances their predictive,
-              adaptive, and explanatory capabilities for smart city and IoT
-              applications.
-            </p>
-            <div class="text-center">
-              <img
-                src="/assets/images/metaverse/g.jpg"
-                alt="Dr. Giancarlo Fortino"
-                class="circle-img mb-3"
-              />
-              <h5>Presented by Dr. Giancarlo Fortino</h5>
-              <h6><i>The University of Calabria, Italy</i></h6>
-            </div>
-
-            <a href="keynotes/giancarlo-fortino/" class="btn btn-primary w-100"
-              >Learn More</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-3 mb-sm-0">
-        <div class="card bg-light-subtle h-100">
-          <div
-            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
-          >
-            <h4 class="fs-4 text-center">
-              Intelligent Edge Sensing and Distributed Cognition Are
-              Transforming the Future of Smart World
-            </h4>
-            <p>
-              Examine how intelligent edge sensing and distributed cognition are
-              enabling real-time, privacy-aware, and resilient smart systems
-              across domains like transportation, healthcare, and mobile
-              crowdsensing.
-            </p>
-            <div class="text-center">
-              <img
-                src="/assets/images/Dr_Runhe_Huang.png"
-                alt="Dr. Runhe Huang"
-                class="circle-img mb-3"
-              />
-              <h5>Presented by Dr. Runhe Huang</h5>
-              <h6><i>Hosei University, Japan</i></h6>
-            </div>
-
-            <a href="keynotes/runhe-huang/" class="btn btn-primary w-100"
-              >Learn More</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-3 mb-sm-0">
-        <div class="card bg-light-subtle h-100">
-          <div
-            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
-          >
-            <h4 class="fs-4 text-center">
-              LLM (LSM) Is Not Equal to the Third AI Wave
-            </h4>
-            <p>
-              Explore how the evolution of AI from its historical cycles to
-              today's LLMs reveals both breakthroughs and barriers, and why
-              diverse, reliable approaches are essential for the next wave of
-              impactful, real-world AI solutions.
-            </p>
-            <div class="text-center">
-              <img
-                src="/assets/images/Chunsheng Yang.jpg"
-                alt="Dr. Chunsheng Yang"
-                class="circle-img mb-3"
-              />
-              <h5>Presented by Dr. Chunsheng Yang</h5>
-              <h6>
-                <i>Fellow of the Canadian Academy of Engineering (FCAE)</i>
-              </h6>
-            </div>
-
-            <a href="keynotes/chunsheng-yang/" class="btn btn-primary w-100"
-              >Learn More</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="container-fluid d-flex flex-column gap-4">
-  <div class="page-section w-100 px-5 pb-5">
-    <hr />
-    <div class="row mb-5 pt-5">
-      <div
-        class="col-sm-6 d-flex flex-column gap-3 justify-content-around py-2"
-      >
-        <h3 class="">
-          Join us at Industry Day and Explore how Innovators are Shaping the
-          Future
-        </h3>
-        <p class="fs-5">
-          Join us at the 2025 IEEE Smart World Congress Industry Day, a dynamic
-          gathering of global thought leaders, pioneering innovators, and
-          economic development experts driving the next wave of smart
-          technologies. Discover cutting-edge solutions, forge strategic
-          partnerships, and explore how industry and research are shaping the
-          intelligent, interconnected world of tomorrow.
-        </p>
-        <div class="d-flex flex-row">
-          <a href="/program/industry-day/" class="btn btn-primary"
-            >Learn More About Industry Day</a
-          >
-        </div>
-      </div>
-      <div
-        class="col-sm-6 py-2 d-flex justify-content-center align-items-end"
-        style="max-height: 500px; overflow: hidden"
-      >
-        <img
-          src="/assets/images/xr-expo-ipDhOQ5gtEk-unsplash.jpg"
-          class="w-100 img-fluid"
-        />
-      </div>
-    </div>
-  </div>
-</section>
-
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
     <div class="row">
@@ -721,11 +828,8 @@ title: Home
   </div>
 </section>
 
-<section class="container-fluid d-flex flex-column gap-4">
+<section class="container-fluid d-flex flex-column gap-4 bg-light">
   <div class="page-section w-100 px-5 py-5">
-    <h2 class="fs-2 text-center mb-5">
-      Explore Stunning Calgary and Its Scenic Surroundings
-    </h2>
     <div class="row">
       <div
         class="col-sm-6 py-2 d-flex justify-content-center align-items-end"
@@ -739,6 +843,7 @@ title: Home
       <div
         class="col-sm-6 d-flex flex-column gap-2 flex-sm-column justify-content-around"
       >
+        <h3 class="">Explore Stunning Calgary and Its Scenic Surroundings</h3>
         <p class="fs-5">
           Calgary, Alberta, Canada, is a vibrant city nestled in the foothills
           of the Canadian Rockies, known for its dynamic mix of urban
@@ -758,10 +863,6 @@ title: Home
       </div>
     </div>
   </div>
-</section>
-
-<section class="container-fluid d-flex flex-column gap-4 bg-light">
-  {% include colocated-conferences.html %}
 </section>
 
 <section
