--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -240,7 +240,7 @@ title: Industry Day
   </div>
 
   <!-- Jan Bradley -->
-  <div class="row">
+  <div class="row" id="jan-bradley-keynote">
     <div
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
@@ -263,15 +263,32 @@ title: Industry Day
       </div>
     </div>
     <div class="col-md-9 col-sm-8">
+      <h4>Keynote Presentation</h4>
+      <p>
+        The City of Calgary is leading the way in technological innovation for
+        municipal services. In this keynote, Jan, joined by a team of City of
+        Calgary IT engineers and Engineers-in-Training (EITs), will spotlight
+        the City's advancements in leveraging emerging technologies to improve
+        service delivery. The presentation will feature practical applications
+        of artificial intelligence (AI), Calgary's award-winning Internet of
+        Things (IoT) network, robotic process automation (RPA), and other
+        state-of-the-art tools driving smart city initiatives. Key strategic
+        frameworks, including Calgary's AI Strategy and Enterprise Data
+        Strategy, will be highlighted to demonstrate the City's forward-thinking
+        approach. The keynote will also underscore Calgary's sustained
+        investment in digital infrastructure, notably its city-wide fibre optic
+        network, which now stretches over 650 kilometers—enabling smart city
+        capabilities and promoting digital equity across the city.
+      </p>
       <h4>Biography</h4>
       <p>
         Jan Bradley is the Director and Chief Information Technology Officer at
         The City of Calgary.
         <br /><br />
-        As the Chief Information Technology Officer (CITO), Jan’s role is to
+        As the Chief Information Technology Officer (CITO), Jan's role is to
         enable City business units to use technology to deliver services to
         citizens. The CITO oversees the investment, delivery and sustainment of
-        The City’s technology infrastructure and leads planning for the
+        The City's technology infrastructure and leads planning for the
         development and growth of City business applications and communication
         systems. Jan has worked for over 30 years in the information technology
         industry and has been working with the City since 2006. During her time
@@ -284,13 +301,13 @@ title: Industry Day
         teams to be solution-focused in their service to the many business units
         Information Technology serves every day. Her number one priority is to
         position Information Technology as a strategic partner to business units
-        in order to deliver on the City’s purpose, “Making life better every
+        in order to deliver on the City's purpose, “Making life better every
         day”.
       </p>
     </div>
   </div>
   <!-- Martin Dinel -->
-  <div class="row">
+  <div class="row" id="martin-dinel-keynote">
     <div
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
@@ -316,6 +333,23 @@ title: Industry Day
       </div>
     </div>
     <div class="col-md-9 col-sm-8">
+      <h4>Keynote Presentation</h4>
+      <p>
+        Martin's keynote will provide a comprehensive overview of Alberta's
+        evolving cybersecurity landscape, emphasizing its critical importance to
+        the province's digital resilience. It will highlight the growing threat
+        of ransomware, phishing, APTs, and DoS attacks, along with recent
+        incidents that underscore the urgency of robust defenses. Key threat
+        actors—including nation-states, cybercriminals, hacktivists, and
+        insiders—will be examined to contextualize Alberta's risk environment.
+        The Government of Alberta's CyberAlberta program will be showcased for
+        its strategic initiatives, partnerships, and measurable impact. The
+        address will also explore the province's efforts to cultivate
+        cybersecurity talent through education, training, and professional
+        development, with a vision of positioning Alberta as a global hub for
+        cyber excellence. The session will conclude with a call to action for
+        collaborative innovation to strengthen Alberta's cybersecurity posture.
+      </p>
       <h4>Biography</h4>
       <p>
         Martin Dinel is a trusted information technology and cybersecurity
