--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@ title: Home
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
     <h2 class="fs-2 text-center">
-      Attend Keynote Presentations by World-Renowned Researchers
+      Attend Keynote Presentations by World-Renowned Researchers and Industry
+      Professionals
     </h2>
     <div class="row g-4">
       <div class="col-md-4 mb-3 mb-sm-0">
