Added program schedule download

--- a/program/index.html
+++ b/program/index.html
@@ -22,6 +22,13 @@ title: Program
       <h1 class="display-5 fw-bolder mt-5">
         IEEE Smart World Congress 2025 <br />Program
       </h1>
+      <a
+        href="/assets/files/IEEE-SWC-2025-Program.pdf"
+        class="btn btn-primary"
+        download
+      >
+        <i class="bi bi-download"></i> Download Program Schedule (PDF)
+      </a>
     </div>
   </div>
 </section>
