--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@ title: Home
         <a href="/registration" class="btn btn-success"
           >Register for SWC 2025</a
         >
+        <a
+          href="/assets/files/IEEE-SWC-2025-Program.pdf"
+          class="btn btn-primary"
+          download
+        >
+          <i class="bi bi-download"></i> Download Program Schedule (PDF)
+        </a>
       </div>
     </div>
   </div>
