--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -298,7 +298,7 @@ title: SEGA Workshop 2025
 
           
         </div>
-
+ <hr class="w-100" />
 
 <h5 class="fs-6 fw-bold">
               Steering Committee
