--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -308,7 +308,7 @@ title: SEGA Workshop 2025
                 Oscar Lin (Chair) <br />
                 Athabasca University, Canada <br />
                 <a href="mailto:oscarl@athabascau.ca"
-                  >mohameda@athabascau.ca</a
+                  >oscarl@athabascau.ca</a
                 >
               </h5>
                 <h5 class="fs-6">
