Updated MVS conference and panels

--- a/panels/ais-transformative-influence-on-higher-education/index.html
+++ b/panels/ais-transformative-influence-on-higher-education/index.html
@@ -46,7 +46,7 @@ title: AI's Transformative Influence on Higher Education
           Join us for an illuminating panel discussion, "AI's Impact on Higher
           Education," where we dive deep into how generative AI is reshaping
           teaching, research, and the future of academia. Our distinguished
-          panel features four accomplished experts, each bringing decades of
+          panel features five accomplished experts, each bringing decades of
           hands-on university experience, groundbreaking research, and
           real-world industry insight spanning law and ethics, cutting-edge
           machine learning and cognitive computing, human-computer interaction,
@@ -230,34 +230,33 @@ title: AI's Transformative Influence on Higher Education
         >
           <div class="text-center">
             <img
-              src="/assets/images/Hui Yu.jpg"
-              alt="Hui Yu"
+              src="/assets/images/Oscar_Lin.jpg"
+              alt="Fuhua (Oscar) Lin"
               class="circle-img mb-3"
             />
-            <h5>Dr. Hui Yu</h5>
+            <h5>Dr. Fuhua (Oscar) Lin</h5>
             <h6>
-              <i>Professor, University of Glasgow</i>
+              <i>Professor, Athabasca University</i>
             </h6>
-            <h6><i>UK</i></h6>
+            <h6><i>Canada</i></h6>
           </div>
         </div>
         <div class="col-md-9 col-sm-8">
           <h3>Biography</h3>
           <p>
-            Hui Yu is a Professor with the University of Glasgow. He leads the
-            Visual Computing and Social Robot Group at the university. His
-            research interests lie in visual and cognitive computing and machine
-            learning with applications to 4D facial expression reconstruction
-            and tracking for social signal analysis, human-machine interaction,
-            as well as intelligent vehicle, and video analysis. Professor Yu's
-            research work has led to several awards and successful collaboration
-            with worldwide institutions and industries. He is the Associate Vice
-            President of the IEEE Systems, Man, and Cybernetics Society and a
-            Scientific Advisor for high-tech companies in the UK.
-            <br /><br /><a
-              href="https://www.gla.ac.uk/schools/psychologyneuroscience/staff/huiyu/"
-              target="_blank"
-              >Professor Yu's website</a
+            Dr. Fuhua (Oscar) Lin is a professor at School of Computing and
+            Information Systems of Faculty of Science and Technology, of
+            Athabasca University, Canada. Dr Lin's research interests include
+            adaptive learning, intelligent systems, online learning, virtual
+            reality, and multi-agent systems. He serves as an Associate Editor
+            of Computers and Education: X-Reality. He served as a General Chair
+            of IEEE International Conference on Cyber Science and Technology
+            Congress both 2020 and 2021, Program Chair of International
+            Conference on Intelligent Tutoring Systems 2024. He serves as a
+            co-General Chair of IEEE SWC 2025.
+
+            <br /><br /><a href="https://oscar.athabascau.ca/" target="_blank"
+              >Professor Lin's website</a
             >
           </p>
         </div>
@@ -325,6 +324,44 @@ title: AI's Transformative Influence on Higher Education
               href="https://ist.psu.edu/directory/dvs6298"
               target="_blank"
               >Professor Singh's website</a
+            >
+          </p>
+        </div>
+      </div>
+      <div class="col-12 row p-0">
+        <div
+          class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+        >
+          <div class="text-center">
+            <img
+              src="/assets/images/Hui Yu.jpg"
+              alt="Hui Yu"
+              class="circle-img mb-3"
+            />
+            <h5>Dr. Hui Yu</h5>
+            <h6>
+              <i>Professor, University of Glasgow</i>
+            </h6>
+            <h6><i>UK</i></h6>
+          </div>
+        </div>
+        <div class="col-md-9 col-sm-8">
+          <h3>Biography</h3>
+          <p>
+            Hui Yu is a Professor with the University of Glasgow. He leads the
+            Visual Computing and Social Robot Group at the university. His
+            research interests lie in visual and cognitive computing and machine
+            learning with applications to 4D facial expression reconstruction
+            and tracking for social signal analysis, human-machine interaction,
+            as well as intelligent vehicle, and video analysis. Professor Yu's
+            research work has led to several awards and successful collaboration
+            with worldwide institutions and industries. He is the Associate Vice
+            President of the IEEE Systems, Man, and Cybernetics Society and a
+            Scientific Advisor for high-tech companies in the UK.
+            <br /><br /><a
+              href="https://www.gla.ac.uk/schools/psychologyneuroscience/staff/huiyu/"
+              target="_blank"
+              >Professor Yu's website</a
             >
           </p>
         </div>
