--- a/registration/index.html
+++ b/registration/index.html
@@ -222,12 +222,12 @@ title: Registration
           <li>Publication of one accepted paper in the proceedings</li>
           <li>A copy of the proceedings the accepted paper belongs to</li>
           <li>
-            Access to all conference, Industry Day, Keynotes, Panels, Workshops, Tutorials, and
-            Special sessions
+            Access to all conference, Industry Day, Keynotes, Panels, Workshops,
+            Tutorials, and Special sessions
           </li>
           <li>Program brochure and conference goodies</li>
           <li>
-            For in-person registration, Lunch, Coffee breaks, Reception, 
+            For in-person registration, Lunch, Coffee breaks, Reception,
             Banquet, and Award ceremony
           </li>
           <li>
@@ -308,13 +308,13 @@ title: Registration
             additional author)
           </li>
           <li>
-            Access to all conference, Industry Day, Keynotes, Panels, Workshops, Tutorials, and
-            Special sessions
+            Access to all conference, Industry Day, Keynotes, Panels, Workshops,
+            Tutorials, and Special sessions
           </li>
           <li>Program brochure and conference goodies</li>
           <li>
-            For in-person registration, Lunch, Coffee breaks, Reception,
-            Banquet and Award ceremony
+            For in-person registration, Lunch, Coffee breaks, Reception, Banquet
+            and Award ceremony
           </li>
         </ul>
 
@@ -360,10 +360,6 @@ title: Registration
               <td>IEEE Life Member</td>
               <td class="text-center">$550</td>
               <td class="text-center">$650</td>
-            </tr>
-            <tr>
-              <td>Online Participation</td>
-              <td class="text-center" colspan="2">$0</td>
             </tr>
           </tbody>
         </table>
