--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -136,7 +136,10 @@ title: IEEE MVS 2025
             <div class="d-flex flex-column">
               <h5 class="fs-6">
                 Azza Basiouni <br />
-                Liwa College, UAE, email: azza.basiouni@lc.ac.ae
+                Liwa College, UAE,
+                <a href="mailto:azza.basiouni@lc.ac.ae"
+                  >azza.basiouni@lc.ac.ae</a
+                >
               </h5>
               <h5 class="fs-6">
                 Junhui Hou <br />
@@ -149,6 +152,18 @@ title: IEEE MVS 2025
                 <a href="mailto:francesco.pupo@unical.it"
                   >francesco.pupo@unical.it</a
                 >
+              </h5>
+            </div>
+          </div>
+          <hr class="w-100" />
+          <div class="d-flex gap-1 flex-column w-100">
+            <h5 class="fs-6 fw-bold">Session Chairs</h5>
+            <div class="d-flex flex-column">
+              <h5 class="fs-6">Peter Ng <br /></h5>
+              <h5 class="fs-6">Shravan Kumar<br /></h5>
+              <h5 class="fs-6">
+                Azza Basiouni <br />
+                Liwa College, UAE
               </h5>
             </div>
           </div>
