Updated Industry Day schedule

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -347,6 +347,10 @@ title: Industry Day
                     by <a href="#diego-magalhaes">Diego Magalhaes</a>, Principal
                     Technologist of AWS Canada
                   </p>
+                  <p class="fs-6">
+                    Present AWS' latest technology development in AI and other
+                    emerging technologies
+                  </p>
                 </div>
               </div>
             </div>
@@ -566,6 +570,10 @@ title: Industry Day
             <p class="fs-6">
               by <a href="#diego-magalhaes">Diego Magalhaes</a>, Principal
               Technologist of AWS Canada
+            </p>
+            <p class="fs-6">
+              Present AWS' latest technology development in AI and other
+              emerging technologies
             </p>
           </div>
         </div>
@@ -867,7 +875,8 @@ title: Industry Day
                     Tom Danshin, CTO of Kornak Technologies <br />
                     <a href="#chris-healy">Chris Healy</a>, President and CEO of
                     In-Flight Data <br />
-                    <a href="#andrea-urbina">Andrea Urbina</a>, CEO of ELIXR Simulations
+                    <a href="#andrea-urbina">Andrea Urbina</a>, CEO of ELIXR
+                    Simulations
                   </p>
                 </div>
               </div>
