--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -75,6 +75,7 @@ title: Industry Day
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light p-0">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
+    <h2 class="text-center">Industry Day Schedule</h2>
     <h3 class="mt-1 mb-2 text-center">Morning Sessions</h3>
 
     <!-- Registration -->
