Updated Industry Day schedule

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -176,7 +176,7 @@ title: Industry Day
               <div class="row">
                 <div class="col-3">
                   <p class="fs-6 text-end fw-bold">
-                    9:35 - 10:35am <br />(60 mins)
+                    9:35am - 10:35am <br />(60 mins)
                   </p>
                 </div>
                 <div class="col-9">
